CT-3815 Fix contrast for active tab (CT-3831)

--- a/app/assets/stylesheets/moj/_navigation.scss
+++ b/app/assets/stylesheets/moj/_navigation.scss
@@ -16,7 +16,6 @@
     li.active {
       background-color: #e7e7e7;
       a {
-        color: $secondary-text-colour;
         padding-bottom: 18px;
       }
     }
